--- a/block-BJaaef/code/style.css
+++ b/block-BJaaef/code/style.css
@@ -1,14 +1,147 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 * {
   box-sizing: border-box;
+}
+header {
+  background-color: #4075d5;
+  color: white;
+  padding: 1rem 0;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-gap: 1rem;
+  max-width: 1300px;
+  margin: 0 auto;
 }
 .box {
   border: 2px solid #d6bcfa;
@@ -18,4 +151,46 @@ body {
 h1,
 h2 {
   text-align: center;
+}
+.text-lg {
+  font-size: 3rem;
+}
+.text-md {
+  font-size: 1.4rem;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+.flex {
+  flex-wrap: wrap;
+}
+p {
+  width: 100%;
+  margin: 0.8rem 0;
+}
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+.wd-30 {
+  flex: 0 1 30%;
+}
+.image {
+  border-radius: 50%;
+  margin-right: 0.8rem;
+  border: 1px solid #597ce0;
+}
+.btn {
+  display: block;
+  width: 100%;
+  border: 0;
+  color: #597ce0;
+  background-color: #e7edfd;
+  padding: 0.4rem 0;
+}
+li {
+  padding: 0.5rem;
+  box-shadow: 0 2px 6px rgb(41, 37, 37);
+  margin: 1rem 0;
 }
